--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,7 @@
         "react/no-string-refs":1,
         "react/no-unescaped-entities":1,
         "react/no-unknown-property":1,
-        // "react/prop-types":1,
+        "react/prop-types":"off",
         "react/require-render-return":1
   }
 }
