--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-leaflet": "^3.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
