--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tinymce/tinymce-react": "^3.12.6",
     "axios": "^0.21.4",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "html-react-parser": "^1.4.0",
     "install": "^0.13.0",
     "leaflet": "^1.7.1",
