--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,14 +6,14 @@
   "rules": {
     "prettier/prettier": "warn",
         "no-unused-vars": 1,
-        "react/react-in-jsx-scope": 0,
+        "react/react-in-jsx-scope":"off",
         "react/display-name":1,
         "react/jsx-key":1,
         "react/jsx-no-comment-textnodes":1,
         "react/jsx-no-duplicate-props":1,
         "react/jsx-no-target-blank":1,
         "react/jsx-no-undef":1,
-        "react/jsx-uses-react":1,
+        "react/jsx-uses-react":"off",
         "react/jsx-uses-vars":1,
         "react/no-children-prop":1,
         "react/no-danger-with-children":1,
