--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
         "react/jsx-no-duplicate-props":1,
         "react/jsx-no-target-blank":1,
         "react/jsx-no-undef":1,
-        "react/jsx-uses-react":"off",
+        "react/jsx-uses-react":1,
         "react/jsx-uses-vars":1,
         "react/no-children-prop":1,
         "react/no-danger-with-children":1,
